--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "lint": "eslint src --ext .ts,.tsx",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.26",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.1.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
+    "@vitejs/plugin-react": "^2.1.0", 
+    "eslint": "^8.24.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
