--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.8",
     "@types/styled-components": "^5.1.26",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
@@ -21,7 +24,7 @@
     "@rocketseat/eslint-config": "^1.1.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0", 
+    "@vitejs/plugin-react": "^2.1.0",
     "eslint": "^8.24.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
